# College

./: README.md
Compilator/: prj.l  prj.y
Exam_java/src/: DeptChair.java  ISegel.java  Lecturer.java  Main.java  Professor.java  Segel.java  SeniorLecturer.java
Hackathon/: CMakeLists.txt  Graph.cpp  Graph.h  MonteCarlo.cpp  MonteCarlo.h  README.md  Random.cpp  Random.h  Utility.cpp  Utility.h  main.cpp  main.h
Homework_1_java/src/: ComplexNum.java  Main.java
Homework_2_java/src/: Location.java  Main.java  MyDate.java  Temperature.java  Utility.java
Homework_3_java/src/: IBuilding.java  IStudy.java  ITeacher.java  Instructor.java  Main.java  Person.java  Professor.java  ProfessorInstructor.java  Student.java  StudentInstructor.java  Worker.java  WorkerInstructor.java
Reliability/OOP_version/: CMakeLists.txt  DestructionSpectrum.cpp  DestructionSpectrum.h  Graph.cpp  Graph.h  MonteCarloMethod.cpp  MonteCarloMethod.h  Random.cpp  Random.h  Statistic.cpp  Statistic.h  Untitled Diagram.drawio  Utilities.cpp  Utilities.h  main.cpp  main.h
Reliability/Procedural_version/: CMakeLists.txt  README.md  Random.cpp  Random.h  Reliability.cpp  Reliability.h  UtilitiesWatch.cpp  UtilitiesWatch.h
